--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,8 @@ services:
       - POSTGRES_USERNAME=${POSTGRES_USER:-postgres}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD:-postgres}
       - RABBITMQ_ADDRESS=rabbitmq
+      - RABBITMQ_USER=guest
+      - RABBITMQ_PASS=guest
   products-db:
     image: postgres:13.3-alpine
     restart: always
@@ -56,3 +58,5 @@ services:
       ./xbes-rabbitmq-consumer/.env
     environment: 
       - RABBITMQ_ADDRESS=rabbitmq
+      - RABBITMQ_USER=guest
+      - RABBITMQ_PASS=guest
