Добавил restart: always в docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,6 +44,7 @@ services:
     build: 
       context: ./rabbitmq
     container_name: rabbitmq
+    restart: always
     ports: 
       - 5672:5672
       - 15672:15672
@@ -53,6 +54,7 @@ services:
     container_name: url-checker
     ports: 
       - 8888:8000
+    restart: always
     environment: 
       - RABBITMQ_ADDRESS=rabbitmq
       - RABBITMQ_USER=guest
